<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- EditText for entering the expense amount -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Amount"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter amount"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"/>

    <!-- Spinner for category selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Category"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <!-- Spinner for tag selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Tag"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/tagSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/noteInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Note"
        android:inputType="text"
        android:layout_marginTop="8dp"/>

    <!-- Button to submit the expense -->
    <Button
        android:id="@+id/submitExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit Expense"
        android:layout_marginTop="24dp"/>


</LinearLayout>

