<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- TextView at the top center -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to ExpenseEase!"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <!-- LinearLayout at the bottom center for buttons -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="50dp">

        <!-- Button for adding an expense -->
        <Button
            android:id="@+id/addExpenseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Expense"
            android:layout_marginBottom="16dp"/>


        <!-- Button to add income -->
        <Button
            android:id="@+id/addIncomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Income"
            android:layout_marginBottom="16dp"/>

        <!-- Button to navigate to chart activity -->
        <Button
            android:id="@+id/viewActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Activity" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

</RelativeLayout>

