<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/oldPinInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter old PIN"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/newPinInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter new PIN"
        android:inputType="numberPassword"
        android:maxLength="4" />

</LinearLayout>
